[package]
name = "gluesql"
version = "0.3.1"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
edition = "2018"
description = "GlueSQL JavaScript Interface"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql-js"
keywords = ["websql", "sql-database", "sql", "webassembly", "rust"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.18"
js-sys = "0.3.45"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

async-trait = "0.1.41"
boolinator = "2.4.0"
futures="0.3"
im = "15.0.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.57"

[dependencies.gluesql_core]
version = "0.3.1"
package = "gluesql"
default-features = false
features = ["alter-table"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
